<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogIn"
        android:textAlignment="center"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:textColor="@color/cyan"
        android:textStyle="bold"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginHorizontal="50dp"
        android:textSize="20sp"
        android:background="@drawable/shape_drawable"
        android:hint="Email"
        android:id="@+id/etEmail"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="20sp"
        android:layout_marginHorizontal="50dp"
        android:background="@drawable/shape_drawable"
        android:hint="Contraseña"
        android:id="@+id/etPassword"
        />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/checkRemember"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="40dp"
        android:text="@string/rememberMe"
        android:textColor="@color/lightblue"
        android:textSize="15sp"
        />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginHorizontal="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/round_button"
        android:text="@string/LogIn"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_forgotten"
            android:textSize="15sp"
            android:layout_marginLeft="80sp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SignUp"
            android:textColor="@color/lightblue"
            android:layout_marginLeft="5sp"
            android:id="@+id/linkSignUp"
            />
    </LinearLayout>


</LinearLayout>